# VisaScraper

./: 186.txt  187.txt  189.txt  190.txt  407.txt  491.txt  494.txt  Dockerfile  docker-compose.yml  pyproject.toml
app1/: scraper.py  tasks.py
app1/management/commands/: run_scraper.py
config/: celery.py  settings.py
